syntax = "proto3";

package user;

service UserService {
  rpc GetProfile(GetProfileRequest) returns (GetProfileResponse);
  rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc GetAddresses(GetAddressesRequest) returns (GetAddressesResponse);
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse);
  rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse);
  rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse);
  rpc Health(HealthRequest) returns (HealthResponse);
}

message GetProfileRequest {
  string userId = 1;
}

message GetProfileResponse {
  UserProfile user = 1;
}

message UpdateProfileRequest {
  string userId = 1;
  string firstName = 2;
  string lastName = 3;
  string phone = 4;
  string dateOfBirth = 5;
  Address address = 6;
}

message UpdateProfileResponse {
  UserProfile user = 1;
  string message = 2;
}

message GetAddressesRequest {
  string userId = 1;
}

message GetAddressesResponse {
  repeated Address addresses = 1;
}

message AddAddressRequest {
  string userId = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  string zipCode = 5;
  string country = 6;
  bool isDefault = 7;
}

message AddAddressResponse {
  Address address = 1;
  string message = 2;
}

message UpdateAddressRequest {
  string userId = 1;
  string addressId = 2;
  string street = 3;
  string city = 4;
  string state = 5;
  string zipCode = 6;
  string country = 7;
  bool isDefault = 8;
}

message UpdateAddressResponse {
  Address address = 1;
  string message = 2;
}

message DeleteAddressRequest {
  string userId = 1;
  string addressId = 2;
}

message DeleteAddressResponse {
  string message = 1;
}

message UserProfile {
  string id = 1;
  string email = 2;
  string firstName = 3;
  string lastName = 4;
  string phone = 5;
  string dateOfBirth = 6;
  Address defaultAddress = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message Address {
  string id = 1;
  string street = 2;
  string city = 3;
  string state = 4;
  string zipCode = 5;
  string country = 6;
  bool isDefault = 7;
  string createdAt = 8;
  string updatedAt = 9;
}

message HealthRequest {}

message HealthResponse {
  string status = 1;
  string timestamp = 2;
}